--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
-    </noscript>
+	</noscript>
+	<div class="title">Tic Tac Toe</div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
