--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,18 @@
       You need to enable JavaScript to run this app.
 	</noscript>
 	<div class="title">Tic Tac Toe</div>
+	<div class="x">
+		X
+		<div class="x-score">
+			0
+		</div>
+	</div>
+	<div class="o">
+		O
+		<div class="o-score">
+			0
+		</div>
+	</div>
 	<div id="root"></div>
     <!--
       This HTML file is a template.
